x and o and beg of winnings

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 button {
   height: 10rem;
   width: 10rem;
@@ -5,5 +9,12 @@ button {
 
 .flex {
   display: flex;
+  justify-content: center;
+}
+
+.gameboard {
+  display: grid;
+  grid-template-columns: repeat(3, 10rem);
+  place-items: center;
   justify-content: center;
 }
